# python-interviews

./: README.md  conditionals.html  conditionals.html.md  index.html  index.html.md  introduction.html  introduction.html.md  print.html  print.html.md  pyproject.toml  search.json  sitemap.xml
_proc/: 00_Introduction.html.md  00_Introduction.ipynb  00_core.ipynb  01_Print.html.md  01_Print.ipynb  02_Conditionals.html.md  02_Conditionals.ipynb  index.ipynb  sidebar.yml
_proc/_docs/: conditionals.html  index.html  index.html.md  introduction.html  print.html  robots.txt  search.json  sitemap.xml
nbs/: 00_Introduction.ipynb  00_core.ipynb  01_Print.ipynb  02_Conditionals.ipynb  index.ipynb  nbdev.yml
python_interviews/: _modidx.py  core.py  export.py
